# django-uzi

./: README.md  mkdocs.yml  pyproject.toml  versions.json
0.4.x/: 404.html  index.html
0.4.x/search/: search_index.json
django_uzi/: __init__.py  apps.py  core.py  settings.py
django_xdi/: __init__.py
docs/: index.md
tests/: conftest.py  extend_tests.py
